--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src",
+    "start": "ENV=production node src",
     "dev": "nodemon src"
   },
   "keywords": [],
