--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "Alan Ayala",
   "license": "ISC",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.3",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "fs-extra": "^9.0.0",
+    "handlebars": "^4.7.6",
     "md5": "^2.2.1",
+    "moment": "^2.26.0",
     "mongoose": "^5.9.16",
     "morgan": "^1.10.0",
     "multer": "^1.4.2"
